<resources>
    <string name="app_name">PitpitPetcare</string>

    <string name="title_welcome_page">Welcome to Story.</string>
    <string name="title_signup_page">Create your Story Account :)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login_page">Log in</string>
    <string name="name">Nama</string>
    <string name="copyright">© 2022 Raspzarriez</string>
    <string name="message_main_page">Enjoy your reading in Story.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="contdesc">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar_dokter">Daftar Dokter</string>
    <string name="please_wait">Please Wait</string>
    <string name="info">Info</string>
    <string name="hewan">Hewan</string>
    <string name="booking">Booking</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="lihat_profil">Lihat Profil</string>
    <string name="keluar">Keluar</string>
    <string name="tentang_pitpit_petcare">Tentang Pitpit PetCare</string>
    <string name="tentang">Tentang</string>
    <string name="alert_message_exit_application">Apakah yakin ingin keluar?</string>
    <string name="doker_tidak_tersedia">Doker tidak tersedia</string>
    <string name="booking_tidak_tersedia">Booking tidak tersedia</string>
    <string name="data_hewan_tidak_tersedia">Data Hewan Tidak Tersedia</string>
    <string name="nama_hewan">Nama Hewan</string>
    <string name="berat">Berat</string>
    <string name="umur">Umur</string>
    <string name="jenis_hewan">Jenis Hewan</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="layanan">Layanan</string>
    <string name="paket_layanan">Paket Layanan</string>
    <string name="tanggal">Tanggal</string>
    <string name="rp_0">Rp 0</string>
    <string name="dokter">Dokter</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="tambah_hewan">Tambah Hewan</string>
    <string name="berat_hewan">Berat Hewan</string>
    <string name="simpan">Simpan</string>
    <string name="apakah_data_yang_dimasukkan_sudah_benar">Apakah data yang dimasukkan sudah benar?</string>
    <string name="umur_hari">Umur (Hari)</string>
    <string name="berat_kg">Berat (Kg)</string>
    <string name="pastikan_berat_yang_dimasukkan_dalam_satuan_kg">Pastikan berat yang dimasukkan dalam satuan Kg</string>
    <string name="umur_dalam_satuan_hari">Umur dalam satuan Hari</string>
    <string name="tanggal_booking">Tanggal Booking</string>
    <string name="status">Status</string>
    <string name="total_biaya">Total Biaya</string>
    <string name="batalkan_booking">Batalkan Booking</string>
    <string name="paket_layanan_tidak_tersedia">Paket Layanan Tidak Tersedia</string>
    <string name="tambah_transaksi">Tambah Transaksi</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="booking_layanan_dokter">Booking Layanan Dokter</string>
    <string name="ubah_foto_profil">Ubah Foto Profil</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="data_pelanggan">Data Pelanggan</string>
    <string name="ubah">Ubah</string>
    <string name="data_dokter">Data Dokter</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="kata_sandi_saat_ini">Kata sandi saat ini</string>
    <string name="kata_sandi_baru">Kata sandi baru</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi kata sandi</string>
    <string name="alamat_e_mail_baru">Alamat E-mail baru</string>
    <string name="jam_antar">Jam Antar</string>
    <string name="jam_jemput">Jam Jemput</string>
    <string name="jadwal_dokter">Jadwal Dokter</string>
    <string name="jadwal_tidak_tersedia">Jadwal Tidak tersedia</string>
    <string name="alamat_praktek">Alamat Praktek</string>
    <string name="nomor_registrasi">Nomor Registrasi</string>
    <string name="tanggal_registrasi">Tanggal Registrasi</string>
    <string name="masa_berlaku">Masa Berlaku</string>
    <string name="lihat_sertifikat">Lihat Sertifikat</string>
    <string name="jadwal_praktek">Jadwal Praktek</string>
    <string name="detail_dokter">Detail Dokter</string>
    <string name="hari">Hari</string>
    <string name="_00_00">00:00</string>
    <string name="surat_izin_praktek">Sertifikat Surat Izin Praktek</string>
    <string name="sertifikat_tidak_tersedia">Sertifikat tidak tersedia</string>
</resources>