<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.animal.ManageAnimalActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_hewan"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutValueAnimalName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/animalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_hewan"
            android:inputType="text"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutValueAnimalType"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutValueAnimalName"
        android:layout_marginTop="10dp"
        android:hint="@string/jenis_hewan">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/jenisHewan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:inputType="none"
            android:textSize="12sp"
            tools:ignore="KeyboardInaccessibleWidget" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutValueAge"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutValueAnimalType"
        android:layout_marginTop="10dp"
        app:helperText="@string/umur_dalam_satuan_hari">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/animalAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/umur_hari"
            android:inputType="number"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutValueWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutValueAge"
        android:layout_marginTop="10dp"
        app:helperText="@string/pastikan_berat_yang_dimasukkan_dalam_satuan_kg">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/animalWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/berat_kg"
            android:inputType="number"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createAnimal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_button_style1"
        android:backgroundTint="@color/brown2"
        android:text="@string/simpan"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</RelativeLayout>