<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/layoutTopBooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_pets_24" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/statusBooking"
                    android:layout_toEndOf="@+id/icImage"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/booking"
                        android:textColor="@color/black"
                        android:id="@+id/title"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/bookingDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggal_booking"
                        android:textSize="10sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/statusBooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/status"
                    android:textColor="@color/green"
                    android:textSize="12sp" />
            </RelativeLayout>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/layoutTopBooking"
                android:layout_marginTop="5dp"
                android:background="@color/grey_20" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/serviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line"
                android:layout_marginTop="5dp"
                android:text="@string/layanan"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/animalName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/serviceName"
                android:text="@string/nama_hewan"
                android:textSize="12sp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/doctorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/animalName"
                android:text="@string/dokter"
                android:textSize="12sp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/doctorName"
                android:layout_marginTop="5dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cancelBooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/batalkan_booking"
                    android:textAllCaps="false"
                    android:textColor="@color/brown2"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/packageName"
                        android:text="@string/total_biaya"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/packageName"
                        android:text="@string/rp_0"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </RelativeLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>